--- a/Front/Html/index.html
+++ b/Front/Html/index.html
@@ -125,7 +125,7 @@
 			<div class="contactform">
 				<div class="contactinf">
 					<h1>CONTACT </h1><h1>INFORMATION</h1>
-					<div class="click"><p>click to </p><p>view</p>
+					<div class="click"><a href=""><p>click to </p><p>view</p></a>
 						<i class="fab fa-google-plus-g"></i> 
 						<i  id="shareBtn" class="fab fa-facebook myface"></i> 
 						<i class="fab fa-twitter"></i>
@@ -177,7 +177,7 @@
 						</div>
 					</form> 
 				</div>
-				<div class="click2"><p style="float: left;">click to view</p>
+				<div class="click2"><a href="" style="float: left;">click to view</a>
 						<i class="fab fa-google-plus-g"></i> 
 						<i id="shareBtnSec" class="fab fa-facebook-f myface"></i> 
 						<i class="fab fa-twitter"></i>
