--- a/Front/Html/index.html
+++ b/Front/Html/index.html
@@ -11,8 +11,10 @@
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
-
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
+	<link href="../../Source/Fonts/MYRIADPRO-REGULAR">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
 <header>
@@ -121,7 +123,18 @@
 	
 	<section id="Contact">
 		<div class="Contact_">
-			<img src="../../Source/img16.png" class="map">
+			<div id="map"></div>
+		    <script>
+		      var map;
+		      function initMap() {
+		        map = new google.maps.Map(document.getElementById('map'), {
+		          center: {lat: 41.7957822, lng:44.7475601 },
+		          zoom: 13
+		        });
+		      }
+		    </script>
+		    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXsXjL7l3Tims7n0EZzBbIF5T-Cpz_haU&callback=initMap"
+    		async defer></script>
 			<div class="contactform">
 				<div class="contactinf">
 					<h1>CONTACT </h1><h1>INFORMATION</h1>
@@ -173,7 +186,9 @@
 								<input type="checkbox" name="recive" value="offers">recive job offers
 								<br><br>
 							</div>
+
 							<button id="SentButton">send</button>
+							<p class="thank">Thank you for your intereset for us, your message has been sent!</p>
 						</div>
 					</form> 
 				</div>
