--- a/Front/Html/index.html
+++ b/Front/Html/index.html
@@ -11,7 +11,9 @@
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
-	<link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
 	<link href="../../Source/Fonts/MYRIADPRO-REGULAR">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -97,7 +99,7 @@
 
 <main>
 	<section id="collectorcars">
-		<h1 style="font-size: 45px;letter-spacing: 3px; ">The corner garage for collector cars</h1>
+		<p style="font-size: 45px;letter-spacing: 3px; ">The corner garage for collector cars</p>
 		<div class="collectorcars_">
 			<div>
 				<img src="../../Source/img9.png">
@@ -114,7 +116,7 @@
 		</div>
 	</section>
 	
-	<section id="road">
+	<section id="road" >
 		<img src="../../Source/img12.png" class="mount">
 		<img src="../../Source/img13.png" class="trees">
 		<img src="../../Source/img14.png" class="line">
