--- a/Front/Html/index.html
+++ b/Front/Html/index.html
@@ -148,7 +148,7 @@
 				</div>
 				<div class="getintouch">
 					<h1>GET IN TOUCH</h1>
-					<form name="myForm" onsubmit="return false">
+					<form name="myForm" class="myform" onsubmit="return false">
 						<div class="form">
 							<div class="form_1">
 								<span class="TextFields">
@@ -189,9 +189,10 @@
 								<br><br>
 							</div>
 
-							<button id="SentButton">send</button>
-							<p class="thank">Thank you for your intereset for us, your message has been sent!</p>
+							
 						</div>
+						<button id="SentButton">send</button>
+							<p class="thank">Thank you for your intereset for us, your message has been sent!</p>
 					</form> 
 				</div>
 				<div class="click2"><a href="" style="float: left;">click to view</a>
